# MysticImage

./: .gitignore  CMakeLists.txt  README.md  mysticimg.cpp
src/: Smoke.cpp  Smoke.hpp  Standard.cpp  Standard.hpp  mystique.cpp
